opentelemetry complete and add entity
