# Internal/order/ports/openapi_types.gen.go
@@ -5,7 +5,7 @@ package ports
 
 // CreateOrderRequest defines model for CreateOrderRequest.
 type CreateOrderRequest struct {
-	CustomerId string             `json:"customerId"`
+	CustomerId string             `json:"customer_id"`
 	Items      []ItemWithQuantity `json:"items"`
 }
 
@@ -22,25 +22,25 @@ type ErrorResponse struct {
 
 // Item defines model for Item.
 type Item struct {
-	Id       *string `json:"id,omitempty"`
-	Name     *string `json:"name,omitempty"`
-	PriceId  *string `json:"priceId,omitempty"`
-	Quantity *int32  `json:"quantity,omitempty"`
+	Id       string `json:"id"`
+	Name     string `json:"name"`
+	PriceId  string `json:"priceId"`
+	Quantity int32  `json:"quantity"`
 }
 
 // ItemWithQuantity defines model for ItemWithQuantity.
 type ItemWithQuantity struct {
-	Id       *string `json:"id,omitempty"`
-	Quantity *int32  `json:"quantity,omitempty"`
+	Id       string `json:"id"`
+	Quantity int32  `json:"quantity"`
 }
 
 // Order defines model for Order.
 type Order struct {
-	CustomerId  *string `json:"customerId,omitempty"`
-	Id          *string `json:"id,omitempty"`
-	Items       *[]Item `json:"items,omitempty"`
-	Paymentlink *string `json:"paymentlink,omitempty"`
-	Status      *string `json:"status,omitempty"`
+	CustomerId  string `json:"customer_id"`
+	Id          string `json:"id"`
+	Items       []Item `json:"items"`
+	PaymentLink string `json:"paymentLink"`
+	Status      string `json:"status"`
 }
 
 // PostCustomerCustomerIdOrdersJSONRequestBody defines body for PostCustomerCustomerIdOrders for application/json ContentType.
